test/tests/errors/error-file-put-wrong-arg-count.sm
// true
// false
/**/
/**/

program{
    file f withbuffer bf;
    put(f, bf);
}